[tool.poetry]
name = "golf_pad"
version = "0.1.0"
description = ""
authors = ["Stephen Onnen <stephen.onnen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
adafruit-circuitpython-hid = "^5.1.1"
Adafruit-Blinka = "^8.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^21.9b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
